packages/nexa_http_native_internal/lib/src/native/nexa_http_native_types.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

final class NexaHttpHeaderEntry extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name_ptr;

  @ffi.UintPtr()
  external int name_len;

  external ffi.Pointer<ffi.Char> value_ptr;

  @ffi.UintPtr()
  external int value_len;
}

final class NexaHttpClientConfigArgs extends ffi.Struct {
  external ffi.Pointer<NexaHttpHeaderEntry> default_headers_ptr;

  @ffi.UintPtr()
  external int default_headers_len;

  external ffi.Pointer<ffi.Char> user_agent_ptr;

  @ffi.UintPtr()
  external int user_agent_len;

  @ffi.Uint64()
  external int timeout_ms;

  @ffi.Uint8()
  external int has_timeout;
}

final class NexaHttpRequestArgs extends ffi.Struct {
  external ffi.Pointer<ffi.Char> method_ptr;

  @ffi.UintPtr()
  external int method_len;

  external ffi.Pointer<ffi.Char> url_ptr;

  @ffi.UintPtr()
  external int url_len;

  external ffi.Pointer<NexaHttpHeaderEntry> headers_ptr;

  @ffi.UintPtr()
  external int headers_len;

  external ffi.Pointer<ffi.Uint8> body_ptr;

  @ffi.UintPtr()
  external int body_len;

  @ffi.Uint8()
  external int body_owned;

  @ffi.Uint64()
  external int timeout_ms;

  @ffi.Uint8()
  external int has_timeout;
}

final class NexaHttpBinaryResult extends ffi.Struct {
  @ffi.Uint8()
  external int is_success;

  @ffi.Uint16()
  external int status_code;

  external ffi.Pointer<NexaHttpHeaderEntry> headers_ptr;

  @ffi.UintPtr()
  external int headers_len;

  external ffi.Pointer<ffi.Char> final_url_ptr;

  @ffi.UintPtr()
  external int final_url_len;

  external ffi.Pointer<ffi.Uint8> body_ptr;

  @ffi.UintPtr()
  external int body_len;

  external ffi.Pointer<ffi.Void> body_owner;

  external ffi.Pointer<ffi.Char> error_json;
}

typedef NexaHttpExecuteCallbackFunction =
    ffi.Void Function(
      ffi.Uint64 request_id,
      ffi.Pointer<NexaHttpBinaryResult> result,
    );
typedef DartNexaHttpExecuteCallbackFunction =
    void Function(int request_id, ffi.Pointer<NexaHttpBinaryResult> result);
typedef NexaHttpExecuteCallback =
    ffi.Pointer<ffi.NativeFunction<NexaHttpExecuteCallbackFunction>>;
